[package]
name = "password-mgr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = "2.1"
dotenv = "0.15"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.13"

[[bin]]
name = "password-mgr"
path = "api/main.rs"